--- a/index.html
+++ b/index.html
@@ -9,49 +9,120 @@ possibilité de donner un nbre point max -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
-    <div class="new_game" ></div>
-    <button id="new_game">New game</button>
-    <button id="rules">Rules</button>
-    <button id="stop_game">stop game</button>
-    <div class="player">
-        <div >
-            <p id="player_1" class="player_1">Player 1</p>
+    <div class="game" >
+        <div class="button">
+            <button id="new_game"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                width="25" height="25"
+                viewBox="0 0 172 172"
+                style=" fill:#000000; margin-right:5px;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#fd3b44"><path d="M86,6.88c-43.65603,0 -79.12,35.46397 -79.12,79.12c0,43.65603 35.46397,79.12 79.12,79.12c43.65603,0 79.12,-35.46397 79.12,-79.12c0,-43.65603 -35.46397,-79.12 -79.12,-79.12zM86,13.76c39.93779,0 72.24,32.30221 72.24,72.24c0,39.93779 -32.30221,72.24 -72.24,72.24c-39.93779,0 -72.24,-32.30221 -72.24,-72.24c0,-39.93779 32.30221,-72.24 72.24,-72.24zM82.56,44.72v37.84h-37.84v6.88h37.84v37.84h6.88v-37.84h37.84v-6.88h-37.84v-37.84z"></path></g></g></svg>Nouvelle partie</button>
+    <!-- Button trigger modal rules-->
+            <button type="button" data-bs-toggle="modal" data-bs-target="#rulesModal" id="rules"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                width="25" height="25"
+                viewBox="0 0 172 172"
+                style=" fill:#000000;margin-right:5px"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#fd3b44"><path d="M86,8.0625c-43,0 -77.9375,34.9375 -77.9375,77.9375c0,43 34.9375,77.9375 77.9375,77.9375c43,0 77.9375,-34.9375 77.9375,-77.9375c0,-43 -34.9375,-77.9375 -77.9375,-77.9375zM86,16.125c38.56562,0 69.875,31.30937 69.875,69.875c0,38.56562 -31.30938,69.875 -69.875,69.875c-38.56563,0 -69.875,-31.30938 -69.875,-69.875c0,-38.56563 31.30937,-69.875 69.875,-69.875zM86,51.0625c-2.28437,0 -4.03125,1.74687 -4.03125,4.03125v6.71875c0,2.28437 1.74688,4.03125 4.03125,4.03125c2.28437,0 4.03125,-1.74688 4.03125,-4.03125v-6.71875c0,-2.28438 -1.74688,-4.03125 -4.03125,-4.03125zM86,77.9375c-2.28437,0 -4.03125,1.74688 -4.03125,4.03125v34.9375c0,2.28437 1.74688,4.03125 4.03125,4.03125c2.28437,0 4.03125,-1.74688 4.03125,-4.03125v-34.9375c0,-2.28437 -1.74688,-4.03125 -4.03125,-4.03125z"></path></g></g></svg>Règles du jeu</button>
         </div>
-        <div class="score_p_0" >
-            <p id="global_score_p_0" >score</p>
-        </div>
-        <div class="current_score" >
-            <p >current <span id="current_score_p_0"></span></p>
+        <div class="game-2">
+            <div class="player">
+                <div >
+                    <p id="player_0" class="player_0">Joueur 1</p>
+                </div>
+                <div class="score_p_0" >
+                    <p id="global_score_p_0" >0</p>
+                </div>
+                <div class="current_score" >
+                    <p >current </p>
+                    <p id="current_score_p_0">0</p>
+                </div>
+            </div>
+            <div class="action">
+                <div class="dice-action" >
+                    <img class="dice" id="dice" src="img/dice_1.svg">
+                </div>
+                <div class="roll_dice" >
+                        <button id="roll_dice"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                            width="25" height="25"
+                            viewBox="0 0 172 172"
+                            style=" fill:#000000;margin-right: 5px;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#fd3b44"><path d="M86,10.32c-41.7778,0 -75.68,33.9022 -75.68,75.68c0,17.3138 5.75696,33.16222 15.38594,45.9025l-17.81812,-5.4489c-1.81822,-0.5566 -3.7434,0.46615 -4.3,2.28437c-0.5566,1.81822 0.46615,3.7434 2.28437,4.3l30.745,9.39281l4.27313,-31.63188c0.14696,-0.9785 -0.13449,-1.97291 -0.77248,-2.72924c-0.63799,-0.75633 -1.57074,-1.20134 -2.56002,-1.22139c-1.76849,-0.03658 -3.27651,1.27386 -3.48703,3.03015l-2.47922,18.3825c-9.00601,-11.67888 -14.39156,-26.2312 -14.39156,-42.26094c0,-38.0646 30.7354,-68.8 68.8,-68.8zM93.26297,10.58203l-0.97422,6.79938l3.41985,0.50391c3.41592,0.46784 -0.0028,-0.00097 3.41312,0.47031l0.97422,-6.79937l-3.41984,-0.50391zM107.43281,13.33l-2.25078,6.49703l3.24515,1.10859c3.24736,1.10768 0.00452,-0.00253 3.25188,1.10859l2.25078,-6.49703zM120.77625,18.69828l-3.42656,5.93937l2.96969,1.72672c3.00656,1.73032 0,0.00312 3.01,1.73344l3.42656,-5.97969zM135.38281,29.56922l-4.27313,31.63188c-0.16484,1.21839 0.33299,2.43215 1.30588,3.1839c0.9729,0.75175 2.27299,0.92723 3.41038,0.46032c1.13739,-0.46691 1.93919,-1.50526 2.10327,-2.72375l2.47922,-18.3825c9.00601,11.67888 14.39156,26.2312 14.39156,42.26094c0,38.0646 -30.7354,68.8 -68.8,68.8v6.88c41.7778,0 75.68,-33.9022 75.68,-75.68c0,-17.3138 -5.75696,-33.16222 -15.38594,-45.9025l17.81812,5.4489c1.81822,0.5566 3.7434,-0.46615 4.3,-2.28437c0.5566,-1.81822 -0.46615,-3.7434 -2.28437,-4.3zM48.43547,143.75437l-3.44672,5.95953l5.96625,3.44672l3.45344,-5.92594zM60.06563,149.855l-2.27766,6.4836l6.4836,2.24406l2.27765,-6.48359l-3.23844,-1.12203zM72.60281,153.59063l-0.99438,6.79937l3.41313,0.51735l3.41312,0.47703l1.0011,-6.79265l-3.41985,-0.51735z"></path></g></g></svg>Lancer le dé</button>
+                </div>
+                <div class="hold" >
+                    <button id="hold"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="25" height="25"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;margin-right: 5px;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#fd3b44"><path d="M85.6775,3.3325c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v105.135l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.52,27.52l2.4725,2.365l2.4725,-2.365l27.52,-27.52c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-105.135c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719zM24.08,55.04v116.96h123.84v-116.96h-34.4c-1.23625,-0.01344 -2.39187,0.63156 -3.02344,1.70656c-0.61813,1.075 -0.61813,2.39187 0,3.46687c0.63156,1.075 1.78719,1.72 3.02344,1.70656h27.52v103.2h-110.08v-103.2h27.52c1.23625,0.01344 2.39188,-0.63156 3.02344,-1.70656c0.61813,-1.075 0.61813,-2.39187 0,-3.46687c-0.63156,-1.075 -1.78719,-1.72 -3.02344,-1.70656z"></path></g></g></svg>Garder</button>
+                </div> 
+                <div class="stop_game">
+                    <button id="stop_game"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="25" height="25"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;margin-right: 5px;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#fd3b44"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM59.555,51.4925l22.79,33.755l-23.005,34.185h10.32l17.63,-26.23h0.7525l17.415,26.23h10.965l-22.8975,-33.8625l23.435,-34.0775h-10.535l-17.63,26.5525h-0.86l-17.2,-26.5525z"></path></g></g></svg>Stop</button>
+                </div>  
+            </div>
+            <div class="player">
+                <div >
+                    <p id="player_1">Joueur 2</p>
+                </div>
+                <div class="score_p_2" >
+                    <p id="global_score_p_1">0</p>
+                </div>
+                <div class="current_score" >
+                    <p >current </p>
+                    <p id="current_score_p_1">0</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="dice">
-        <div class="dice" >
-            <img class="dice" id="dice" src="img/dice_1.svg">
+    <!-- Button trigger modal -->
+  
+  <!-- Modal -->
+  <div class="modal show " id="rulesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Jeu de dé</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="roll_dice" >
-                <button id="roll_dice">roll dice</button>
+        <div class="modal-body">
+          <h6>Le but est simple : arriver à 100 points avant son adversaire !</h6>
+          <p>Vous avez un score global et un score temporaire.<br>
+        Lancez le dé autant de fois que vous le souhaitez pour cumuler des points temporaires et cliquer sur garder pour les ajouter à votre score global. <br>
+        Mais attention! Si le résultat du dé vaut 1, voous perdez tous vos points temporaires et c'est au joueur suivant de tenter sa chance ! </p>
         </div>
-        <div class="hold" >
-            <button id="hold">hold</button>
+        <div class="modal-footer">
+          <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="go_button">C'est parti</button>
         </div>
-        
+      </div>
     </div>
-    <div class="player">
-        <div class="player_2" >
-            <p id="player_2">Player 2</p>
-        </div>
-        <div class="score_p_2" >
-            <p id="global_score_p_1">score</p>
-        </div>
-        <div class="current_score" >
-            <p >current <span id="current_score_p_1"></span></p>
-        </div>
-    </div>
+  </div>
 
+  <div class="modal show " id="winnerModal" tabindex="-1" aria-labelledby="winnerModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <h5 class="modal-title" id="winnerModalLabel">Jeu de dé</h5> -->
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h6>Félicitations !</h6>
+          <p class="winner"></p>
+            <!-- <div style="width:100%;height:0;padding-bottom:109%;position:relative;"><iframe src="https://giphy.com/embed/lnsaLM9tsRjSpgdUSi" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div> -->
+            <img src='img/giphy.gif' class="trophy" alt="trophy">
+        </div>
+        <div class="modal-footer">
+          <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="go_button">Nouvelle partie</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
