--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ possibilité de donner un nbre point max -->
         <div class="game-2">
             <div class="player">
                 <div class="player_0">
-                    <p id="player_0" ></p><span class="current-p-0"><img src="img/Ellipse 19.png" alt="elispse" ></span>
+                    <p id="player_0" ></p><span class="current-p-0"><img src="images/Ellipse 19.png" alt="elispse" ></span>
                 </div>
                 <div class="score_p_0" >
                     <p id="global_score_p_0" >0</p>
@@ -42,7 +42,7 @@ possibilité de donner un nbre point max -->
             </div>
             <div class="action">
                 <div class="dice-action" >
-                    <img class="dice" id="dice" src="img/dice_1.svg">
+                    <img class="dice" id="dice" src="images/dice_1.svg">
                 </div>
                 <div class="roll_dice" >
                         <button id="roll_dice"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
@@ -65,7 +65,7 @@ possibilité de donner un nbre point max -->
             </div>
             <div class="player">
                 <div class="player_1">
-                    <p id="player_1" ></p><span class="current-p-1 not-displayed"><img class="current not-displayed"src="img/Ellipse 19.png" alt="elispse" ></span>
+                    <p id="player_1" ></p><span class="current-p-1 not-displayed"><img src="images/Ellipse 19.png" alt="elispse" ></span>
                 </div>
                 <div class="score_p_2" >
                     <p id="global_score_p_1">0</p>
@@ -93,10 +93,10 @@ possibilité de donner un nbre point max -->
         Mais attention! Si le résultat du dé vaut 1, voous perdez tous vos points temporaires et c'est au joueur suivant de tenter sa chance ! </p>
           <div class="row">
             <div class="col">
-              <input type="text" class="form-control" placeholder="Joueur 1" id="player-1-name" aria-label="player-1-name">
+              <input type="text" class="form-control" placeholder="Joueur 1" id="player-0-name" aria-label="player-0-name">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="Joueur 2" id="player-2-name" aria-label="player-2-name">
+              <input type="text" class="form-control" placeholder="Joueur 2" id="player-1-name" aria-label="player-1-name">
             </div>
           </div>
         </div>
@@ -119,11 +119,11 @@ possibilité de donner un nbre point max -->
           <h6>Félicitations !</h6>
           <p class="winner"></p>
             <!-- <div style="width:100%;height:0;padding-bottom:109%;position:relative;"><iframe src="https://giphy.com/embed/lnsaLM9tsRjSpgdUSi" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div> -->
-            <img src='img/giphy.gif' class="trophy" alt="trophy">
+            <img src='images/giphy.gif' class="trophy" alt="trophy">
         </div>
         <div class="modal-footer">
           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="go_button">Nouvelle partie</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="new_game_after_win">Nouvelle partie</button>
         </div>
       </div>
     </div>
